--- a/style/blocks/hello.css
+++ b/style/blocks/hello.css
@@ -1,22 +1,23 @@
 .hello{
-  margin-bottom: 264px;
+  margin-bottom: 249px;
 }
 .hello__title{
   max-width: 511px;
   max-height: 197px;
   font-weight: 700;
   font-size: 72px;
-  line-height: 93px;
-  margin-bottom: 30px;
+  line-height: 96px;
+  margin-bottom: 28px;
 }
 
 .hello__subtitle{
   font-weight: 400;
   font-size: 18px;
-  margin-bottom: 48px;
+  margin-bottom: 31px;
   }
 
   a.button{
+    display: inline-block;
     font-weight: 700;
     font-size: 14px;
     background: #F5170E;
