--- a/style/blocks/offers.css
+++ b/style/blocks/offers.css
@@ -27,7 +27,6 @@
   background: #FFF;
   border-radius: 0px 0px 5px 5px;
   width: 362px;
-  height: 305px;
   padding: 37px 16px 26px 20px;
 }
 
@@ -62,7 +61,7 @@ padding-right: 11px;
 }
 
 .offers__features{
-  margin-bottom: 26px;
+  margin-bottom: 25px;
 }
 
 .offers__text{
@@ -70,7 +69,7 @@ padding-right: 11px;
   font-weight: 400;
   font-size: 14px;
   line-height: 21px;
-  margin-bottom: 40px;
+  margin-bottom: 24px;
 }
 
 .offers__item{
@@ -90,5 +89,9 @@ a.button--light{
   background: #FFFFFF;
   border: 1px solid #F5170E;
   padding: 18px 30px;
-  
+}
+
+a.button--light:hover{
+  background:  #F5170E;
+  color: #FFF;
 }
