--- a/style/main.css
+++ b/style/main.css
@@ -7,3 +7,5 @@
 @import url(./blocks/about.css);
 @import url(./blocks/footer.css);
 @import url(./blocks/services.css);
+@import url(./blocks/welcome.css);
+@import url(./blocks/reviews.css);
