--- a/style/blocks/base.css
+++ b/style/blocks/base.css
@@ -141,11 +141,11 @@ address{
 	right: 2px;
 	display: flex;
 	flex-direction: column;
-	align-items: flex-start;
+	align-items: center;
 	justify-content: center;
-	height: 68px;
+	/*height: 68px;*/
 	width: 157px;
-	padding-left: 17px;
+	padding: 13px 0px;
 	background-color: rgba(237, 237, 237, 0.8);
 	border-radius: 4px;
 	cursor: pointer;
