--- a/style/blocks/reviews.css
+++ b/style/blocks/reviews.css
@@ -140,9 +140,11 @@
   color: #1A1B1E;
   border-radius: 5px;
   border: none;
+  border-color: transparent;
   padding: 20px 30px;
   margin-right: 28px;
   margin-bottom: 26px;
+  outline: none;
 }
 
 .form__input::placeholder{
@@ -163,7 +165,7 @@
 
 .form__input:focus{
   border: 1px solid #F5170E;
-  outline: none;
+  transition: 0.3s;
 }
 
 .controls{
